; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio.c_vgic_data_mmio_bus_to_host.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio.c_vgic_data_mmio_bus_to_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @vgic_data_mmio_bus_to_host(i8* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @kvm_mmio_read_buf(i8* %7, i32 %8)
  store i64 %9, i64* %6, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %19 [
    i32 1, label %11
    i32 2, label %13
    i32 4, label %16
  ]

11:                                               ; preds = %2
  %12 = load i64, i64* %6, align 8
  store i64 %12, i64* %3, align 8
  br label %22

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  %15 = call i64 @le16_to_cpu(i64 %14)
  store i64 %15, i64* %3, align 8
  br label %22

16:                                               ; preds = %2
  %17 = load i64, i64* %6, align 8
  %18 = call i64 @le32_to_cpu(i64 %17)
  store i64 %18, i64* %3, align 8
  br label %22

19:                                               ; preds = %2
  %20 = load i64, i64* %6, align 8
  %21 = call i64 @le64_to_cpu(i64 %20)
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %19, %16, %13, %11
  %23 = load i64, i64* %3, align 8
  ret i64 %23
}

declare dso_local i64 @kvm_mmio_read_buf(i8*, i32) #1

declare dso_local i64 @le16_to_cpu(i64) #1

declare dso_local i64 @le32_to_cpu(i64) #1

declare dso_local i64 @le64_to_cpu(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
